PostRevisions. Update scrollToSelectedItem method of EditorRevisonsList to scroll sideways when the list is horizontal. Reduce width of revisions list buttons on small viewports, to avoid occasional issue where only one button's content is visible.

--- a/client/post-editor/editor-revisions-list/style.scss
+++ b/client/post-editor/editor-revisions-list/style.scss
@@ -199,7 +199,7 @@
 	padding: 8px 16px;
 	margin: 0;
 	min-height: 73px;
-	width: 60vw;
+	width: 45vw;
 
 	@include breakpoint( '>660px' ) {
 		display: block;
